# meli

./: .gdbinit  .git-blame-ignore-revs  .gitignore  .gitmodules  .mailmap  BUILD.md  CHANGELOG.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  Makefile  README  README.md  build.rs  cliff.toml  codemeta.json  config_macros.rs  deny.toml  meli-themes.5  meli.1  meli.conf.5  rustfmt.toml  sample-config
debug_printer/: Cargo.toml
debug_printer/src/: lib.rs
meli/: Cargo.toml  build.rs  config_macros.rs
meli/docs/: external-tools.md  mail.vim  meli-themes.5  meli.1  meli.7  meli.conf.5  meli.conf.examples.5
meli/docs/historical-manpages/: copyright
meli/docs/samples/: sample-config.toml
meli/src/: accounts.rs  args.rs  command.rs  components.rs  conf.rs  contacts.rs  jobs.rs  jobs_view.rs  lib.rs  mail.rs  mailbox_management.rs  mailcap.rs  main.rs  managesieve.rs  manpages.rs  notifications.rs  patch_retrieve.rs  plugins.rs  signal_handlers.rs  sqlite3.rs  state.rs  subcommands.rs  svg.rs  terminal.rs  types.rs  utilities.rs
meli/src/accounts/: backend_ops.rs  jobs.rs  mailbox.rs  mailbox_ops.rs  tests.rs
meli/src/command/: actions.rs  argcheck.rs  error.rs  history.rs  parser.rs  tests.rs
meli/src/components/: contacts.rs  jobs_view.rs  mail.rs  svg.rs  utilities.rs
meli/src/conf/: accounts.rs  composing.rs  default_values.rs  listing.rs  notifications.rs  overrides.rs  pager.rs  pgp.rs  preprocessing.rs  shortcuts.rs  tags.rs  terminal.rs  tests.rs  themes.rs
meli/src/contacts/: contact_list.rs  editor.rs  list.rs  mod.rs
meli/src/mail/: compose.rs  listing.rs  pgp.rs  status.rs  view.rs
meli/src/manage/: jobs.rs  mailboxes.rs  mod.rs
meli/src/plugins/: backend.rs  rpc.rs
meli/src/sqlite3/: tests.rs
meli/src/terminal/: braille.rs  cells.rs  color.rs  embed.rs  embedded.rs  keys.rs  position.rs  screen.rs  tests.rs  text_editing.rs
meli/src/types/: helpers.rs
meli/src/utilities/: dialogs.rs  layouts.rs  pager.rs  tables.rs  tests.rs  text.rs  widgets.rs
meli/src/version_migrations/: mod.rs  tests.rs  v0_8_10.rs  v0_8_11.rs  v0_8_12.rs  v0_8_13.rs  v0_8_8.rs  v0_8_9.rs
meli/tests/: test_cli_subcommands.rs
melib/: Cargo.toml  README.md  build.rs
melib/src/: addressbook.rs  async.rs  async_workers.rs  backends.rs  collection.rs  conf.rs  connections.rs  datetime.rs  email.rs  error.rs  grapheme_clusters.rs  lib.rs  logging.rs  mailbox.rs  parsec.rs  search.rs  sieve.rs  smtp.rs  sqlite3.rs  structs.rs  thread.rs  utilities.rs  wcwidth.rs
melib/src/addressbook/: jscontact.rs  mod.rs  mutt.rs  vcard.rs
melib/src/backends/: imap.rs  imap_async.rs  jmap.rs  maildir.rs  mbox.rs  nntp.rs  notmuch.rs  tests.rs  utf7.rs
melib/src/conf/: mod.rs  pager.rs
melib/src/contacts/: card.rs  jscontact.rs  mod.rs  mutt.rs  notmuchcontact.rs  vcard.rs
melib/src/email/: address.rs  attachment_types.rs  attachments.rs  compose.rs  headers.rs  list_management.rs  mailto.rs  parser.rs  pgp.rs  signatures.rs
melib/src/error/: network.rs
melib/src/gpgme/: README.md  bindgen-gpgme-funcs.sh  bindgen-gpgme-rest.sh  bindings.rs  bindings_funcs.rs  bindings_rest.rs  bindings_rest_32.rs  io.rs  key.rs  mod.rs  tests.rs
melib/src/imap/: cache.rs  connection.rs  email.rs  error.rs  fetch.rs  mailbox.rs  managesieve.rs  mod.rs  operations.rs  protocol_parser.rs  search.rs  untagged.rs  watch.rs
melib/src/jmap/: argument.rs  backend_mailbox.rs  capabilities.rs  comparator.rs  connection.rs  email.rs  filters.rs  identity.rs  mailbox.rs  methods.rs  mod.rs  objects.rs  operations.rs  protocol.rs  rfc8620.rs  session.rs  submission.rs  tests.rs  thread.rs
melib/src/mailbox/: accounts.rs  backends.rs  collection.rs  email.rs  mod.rs  thread.rs
melib/src/maildir/: backend.rs  mod.rs  stream.rs  tests.rs  utilities.rs  watch.rs
melib/src/mbox/: mod.rs  write.rs
melib/src/nntp/: connection.rs  mailbox.rs  mod.rs  operations.rs  protocol_parser.rs  store.rs
melib/src/notmuch/: directory.rs  ffi.rs  mailbox.rs  message.rs  mod.rs  notmuch.h  query.rs  snapshot.rs  tags.rs  thread.rs
melib/src/sieve/: ast.rs  mod.rs  parser.rs  tests.rs
melib/src/smtp/: tests.rs
melib/src/text/: grapheme_clusters.rs  line_break.rs  mod.rs  search.rs  tables.rs  types.rs  wcwidth.rs
melib/src/text_processing/: grapheme_clusters.rs  line_break.rs  mod.rs  search.rs  tables.rs  types.rs  wcwidth.rs
melib/src/thread/: iterators.rs
melib/src/utils/: connections.rs  datetime.rs  fnmatch.rs  futures.rs  lock.rs  logging.rs  mod.rs  parsec.rs  patch_retrieve.rs  percent_encoding.rs  random.rs  shellexpand.rs  sqlite3.rs  tests.rs
melib/tests/: generating_email.rs  imap_connection.rs  mbox_parse.rs  test_sample_longmessage.eml
melib/tests/bins/: .gitignore  Makefile  build_static_stunnel_binary.sh  make_localhost_cert.sh  stunnel-5.70.tar.xz
melib/tests/imap/: main.rs
melib/tests/integration/: configs.rs  generating_email.rs  main.rs  mbox_parse.rs
melib/tests/jmap/: main.rs
melib/tests/maildir/: main.rs
melib/tests/notmuch/: main.rs
melib/tests/smtp/: main.rs
testing/: Cargo.toml
testing/src/: email_parse.rs  imap_conn.rs  linebreak.rs  managesieve.rs
tools/: Cargo.toml  README.md
tools/mutt2meli/: .muttrc  Cargo.toml
tools/mutt2meli/src/: lexer.rs  main.rs  muttrc.lalrpop
tools/src/: email_parse.rs  embed.rs  embedded.rs  imapshell.rs  linebreak.rs  linebreak1.rs  managesieve.rs  mboxparse.rs  smtp_conn.rs
ui/: Cargo.toml
ui/src/: cache.rs  cells.rs  components.rs  conf.rs  execute.rs  helpers.rs  lib.rs  mailcap.rs  plugins.rs  position.rs  sample-plugin.py  search.rs  sqlite3.rs  state.rs  terminal.rs  types.rs  workers.rs
ui/src/components/: contacts.rs  indexer.rs  mail.rs  mod.rs  notifications.rs  utilities.rs
ui/src/conf/: accounts.rs  composing.rs  mailer.rs  mod.rs  notifications.rs  pager.rs  pgp.rs  shortcuts.rs  tags.rs  terminal.rs  themes.rs
ui/src/execute/: actions.rs  history.rs  mod.rs
ui/src/plugins/: backend.rs  rpc.rs
ui/src/terminal/: cells.rs  embed.rs  grapheme_clusters.rs  keys.rs  position.rs  text_editing.rs  (+1 more)
(+396 files in other folders)
