[workspace]
resolver = "2"

members = ["meli", "melib"]

[workspace.dependencies]
bitflags = { version = "2.10", features = ["serde"] }
flate2 = { version = "1" }
futures = { version = "0.3.30", default-features = false, features = ["async-await", "executor", "std"] }
indexmap = { version = "^2.3", default-features = false, features = ["serde", "std"] }
libc = { version = "0.2", features = ["extra_traits"] }
nix = { version = "0.30", default-features = false }
regex = { version = "1" }
rusty-fork = { version = "0.3.0" }
serde = { version = "1" }
serde_derive = { version = "1" }
serde_json = { version = "1" }
smallvec = { version = "^1.15", features = ["serde"] }
tempfile = { version = "3.3" }
toml = { version = "0.8", default-features = false, features = ["display", "preserve_order", "parse"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
debug = false
strip = true
