[package]
name = "meli"
version = "0.8.12"
authors = ["Manos Pitsidianakis <manos@pitsidianak.is>"]
edition = "2021"
rust-version = "1.85.0"
license = "EUPL-1.2 OR GPL-3.0-or-later"
readme = "README.md"
description = "terminal e-mail client"
homepage = "https://meli-email.org"
repository = "https://git.meli-email.org/meli/meli.git"
keywords = ["mail", "mua", "maildir", "terminal", "imap"]
categories = ["command-line-utilities", "email"]
default-run = "meli"
exclude = ["/docs/historical-manpages"]

[[bin]]
name = "meli"
path = "src/main.rs"

[lib]
name = "meli"
path = "src/lib.rs"

[dependencies]
aho-corasick = { version = "1.1.3" }
async-task = { version = "^4.2.0" }
bitflags = { workspace = true }
crossbeam = { version = "^0.8" }
flate2 = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
itoa = { version = "1", default-features = false }
libc = { workspace = true }
libz-sys = { version = "1.1", features = ["static"], optional = true }
linkify = { version = "^0.10", default-features = false }
melib = { path = "../melib", version = "0.8.12", features = [] }
nix = { workspace = true, default-features = false, features = ["signal", "poll", "term", "ioctl", "process"] }
regex = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
signal-hook = { version = "^0.3", default-features = false, features = ["iterator"] }
signal-hook-registry = { version = "1.2.0", default-features = false }
smallvec = { workspace = true }
structopt = { version = "0.3.26", default-features = false }
# svg_crate = { version = "^0.13", optional = true, package = "svg" }
termion = { version = "1.5.1", default-features = false }
toml = { workspace = true }
xdg = { version = "2.1.0" }

[features]
default = ["sqlite3", "notmuch", "smtp", "dbus-notifications", "gpgme", "cli-docs", "jmap", "static"]
notmuch = ["melib/notmuch"]
jmap = ["melib/jmap"]
sqlite3 = ["melib/sqlite3"]
smtp = ["melib/smtp"]
smtp-trace = ["smtp", "melib/smtp-trace"]
dbus-notifications = ["dep:notify-rust"]
cli-docs = ["dep:flate2"]
# svgscreenshot = ["dep:svg_crate"]
gpgme = ["melib/gpgme"]
# Static / vendoring features.
tls-static = ["melib/tls-static"]
http-static = ["melib/http-static"]
sqlite3-static = ["melib/sqlite3-static"]
dbus-static = ["dep:notify-rust", "notify-rust?/d_vendored"]
libz-static = ["dep:libz-sys", "libz-sys?/static"]
static = ["tls-static", "http-static", "sqlite3-static", "dbus-static", "libz-static"]

# Print tracing logs as meli runs in stderr
# enable for debug tracing logs: build with --features=debug-tracing and export MELI_DEBUG_STDERR
debug-tracing = ["melib/debug-tracing"]

[build-dependencies]
flate2 = { workspace = true, optional = true }
proc-macro2 = { version = "1.0.37" }
quote = { version = "^1.0" }
regex = { workspace = true }
syn = { version = "1", features = [] }

[dev-dependencies]
assert_cmd = { version = "=2.0.13" }
flate2 = { workspace = true }
predicates = { version = "3" }
regex = { workspace = true }
rusty-fork = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(target_os="linux")'.dependencies]
notify-rust = { version = "^4", default-features = false, features = ["dbus"], optional = true }
