[package]
name = "melib"
version = "0.8.7"
authors = ["Manos Pitsidianakis <manos@pitsidianak.is>"]
homepage = "https://meli-email.org"
repository = "https://git.meli-email.org/meli/meli.git"
description = "library for e-mail clients and other e-mail applications"
keywords = ["mail", "mua", "maildir", "imap", "jmap"]
categories = ["email", "parser-implementations"]
license = "EUPL-1.2 OR GPL-3.0-or-later"
readme = "README.md"
edition = "2021"
build = "build.rs"
rust-version = "1.70.0"

[lib]
name = "melib"
path = "src/lib.rs"

[dependencies]
async-fn-stream = { version = "=0.2.2" }
async-io = { version = "2" }
base64 = { version = ">= 0.13, <= 0.22" }
bitflags = { version = "2.4", features = ["serde"] }
cfg-if = { version = "^1.0.0" }
chrono = { version = "^0.4", default-features = false }
data-encoding = { version = "2.1.1" }
encoding = { version = "0.2.33", default-features = false }
encoding_rs = { version = "^0.8" }
flate2 = { version = "1.0.16" }
futures = { version = "0.3.30", default-features = false, features = ["async-await", "executor", "std"] }
imap-codec = { version = "2.0.0-alpha.4", features = ["ext_condstore_qresync", "ext_id"], optional = true }
indexmap = { version = "^2.3", default-features = false, features = ["serde", "std"] }
isahc = { version = "^1.7.2", optional = true, default-features = false, features = ["http2", "json", "text-decoding"] }
libc = { version = "0.2.125", features = ["extra_traits"] }
libloading = { version = "^0.8" }
log = { version = "0.4", features = ["std"] }
native-tls = { version = "0.2.3", default-features = false, optional = true }
nix = { version = "0.29", default-features = false, features = ["fs", "socket", "dir", "hostname"] }
nom = { version = "7" }
notify = { version = "6.1.1", optional = true }
polling = { version = "3" }
regex = { version = "1" }
rusqlite = { version = "^0.29", default-features = false, features = ["array", "modern_sqlite"], optional = true }
serde = { version = "1.0", features = ["rc"] }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_path_to_error = { version = "0.1" }
smallvec = { version = "^1.5.0", features = ["serde"] }
smol = { version = "2" }
socket2 = { version = "0.5", features = [] }
unicode-segmentation = { version = "1.2.1", default-features = false }
url = { version = "2.4", optional = true }
uuid = { version = "^1", features = ["serde", "v4", "v5"] }
xdg = { version = "2.1.0" }

[features]
default = ["imap", "nntp", "maildir", "mbox-notify", "smtp"]

debug-tracing = []
gpgme = []
http = ["isahc"]
http-static = ["isahc", "isahc/static-curl"]
imap = ["imap-codec", "tls"]
imap-trace = ["imap"]
jmap = ["http", "url/serde"]
jmap-trace = ["jmap"]
nntp = ["tls"]
nntp-trace = ["nntp"]
maildir = ["notify"]
mbox-notify = ["notify"]
notmuch = ["maildir"]
smtp = ["tls"]
smtp-trace = ["smtp"]
sqlite3 = ["sqlite3-static"]
sqlite3-static = ["rusqlite", "rusqlite/bundled-full"]
tls = ["native-tls"]
tls-static = ["tls", "native-tls/vendored"]

[build-dependencies]
flate2 = { version = "1.0.16" }

[dev-dependencies]
sealed_test = { version = "1.1.0" }
stderrlog = { version = "^0.5" }
tempfile = { version = "3.3" }
toml = { version = "0.8", default-features = false, features = ["display","preserve_order","parse"] }
