[package]
name = "testing"
version = "0.4.1"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
workspace = ".."
edition = "2018"

[[bin]]
name = "emailparse"
path = "src/email_parse.rs"

[[bin]]
name = "mboxparse"
path = "src/mboxparse.rs"

[[bin]]
name = "imapconn"
path = "src/imap_conn.rs"

[[bin]]
name = "managesieve_conn"
path = "src/managesieve.rs"

[dependencies]
melib = { path = "../melib", version = "*", features = ["debug-tracing", "unicode_algorithms"] }

[features]
default = []

# Print tracing logs as meli runs
debug-tracing = []
