[package]
name = "tools"
version = "0.4.1"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2018"
rust-version = "1.65.0"

license = "GPL-3.0-or-later"
homepage = "https://meli.delivery"
repository = "https://git.meli.delivery/meli/meli.git"
publish = false

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "emailparse"
path = "src/email_parse.rs"

[[bin]]
name = "mboxparse"
path = "src/mboxparse.rs"

[[bin]]
name = "imapshell"
path = "src/imapshell.rs"
required-features = ["melib/imap_backend"]

[[bin]]
name = "smtp_conn"
path = "src/smtp_conn.rs"
required-features = ["melib/smtp"]

[[bin]]
name = "embed"
path = "src/embed.rs"

[dependencies]
crossbeam = { version = "^0.8" }
meli = { version = "0.7" }
melib = { version = "0.7", features = ["debug-tracing", "unicode_algorithms"] }
nix = { version = "^0.24", default-features = false }
signal-hook = { version = "^0.3", default-features = false }
signal-hook-registry = { version = "1.2.0", default-features = false }

[features]
default = ["debug-tracing"]

# Print tracing logs as meli runs
debug-tracing = ["meli/debug-tracing"]
