[package]
name = "tools"
version = "0.4.1"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2018"
rust-version = "1.65.0"
license = "GPL-3.0-or-later"
homepage = "https://meli-email.org"
repository = "https://git.meli-email.org/meli/meli.git"
publish = false

[[bin]]
name = "emailparse"
path = "src/email_parse.rs"

[[bin]]
name = "mboxparse"
path = "src/mboxparse.rs"

[[bin]]
name = "embedded"
path = "src/embedded.rs"

[[bin]]
name = "managesieve-client"
path = "src/managesieve.rs"
required-features = ["melib/imap"]

[dependencies]
crossbeam = { version = "^0.8" }
meli = { path = "../meli", version = "0.8" }
melib = { path = "../melib", version = "0.8", features = ["debug-tracing" ] }
nix = { version = "^0.24", default-features = false }
signal-hook = { version = "^0.3", default-features = false, features = ["iterator"] }
signal-hook-registry = { version = "1.2.0", default-features = false }

[features]
default = ["debug-tracing"]

# Print tracing logs as meli runs
debug-tracing = ["meli/debug-tracing"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
