[package]
name = "tokio-client"
version = "0.1.0"
edition = "2021"
authors = ["Damian Poddebniak <poddebniak@mailbox.org>"]
repository = "https://github.com/duesee/imap-codec"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.71"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

#imap-codec = { version = "0.11.0", features = ["ext_sasl_ir", "ext_literal", "ext_idle", "ext_enable"] }
imap-codec = { path = "../../../../../../imap-codec/imap-codec", features = ["ext_sasl_ir", "ext_literal", "ext_idle", "ext_enable"] }
tokio-support = { path = "../tokio-support" }

[workspace]
