[package]
name = "tokio-server"
version = "0.1.0"
edition = "2021"
authors = ["Damian Poddebniak <poddebniak@mailbox.org>"]
repository = "https://github.com/duesee/imap-codec"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
argon2 = "0.5.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

#imap-codec = { version = "0.11.0" }
imap-codec = { path = "../../../../../../imap-codec/imap-codec" }
tokio-support = { path = "../tokio-support" }

[workspace]
