[package]
name = "tokio-support"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Damian Poddebniak <poddebniak@mailbox.org>"]
repository = "https://github.com/duesee/imap-codec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
bounded-static = "0.5.0"
thiserror = "1.0.29"
tokio-util = { version = "0.7.8", features = ["codec"] }

#imap-codec = { version = "0.11.0", features = ["bounded-static"] }
imap-codec = { path = "../../../../../../imap-codec/imap-codec", features = ["bounded-static"] }

[workspace]
